best-practices-vpol/restrict-default-sa/.chainsaw-test/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-01
spec:
  serviceAccountName: my-service-account
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-02
spec:
  serviceAccountName: app-sa
  containers:
  - name: app
    image: busybox:latest
    command: ["sh", "-c", "sleep 3600"]
