best-practices-vpol/restrict-default-sa/.chainsaw-test/service-accounts.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: my-service-account
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: app-sa
