best-practices-vpol/restrict-default-sa/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-default-sa
spec:
  steps:
  - name: create-service-accounts
    try:
    - apply:
        file: service-accounts.yaml
  - name: apply-policy
    try:
    - apply:
        file: ../restrict-default-sa.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1alpha1
          kind: ValidatingPolicy
          metadata:
            name: restrict-default-sa
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
    - sleep:
       duration: 5s
  - name: test-pods
    try:
    - apply:
        file: good-pod.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-default.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-empty.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-missing.yaml
